# ACVD

./: .gitignore  .travis.yml  ACVD.js  ACVD.json  ACVDConfig.cmake.in  ACVDConfigVersion.cmake.in  CMakeLists.txt  Readme  Readme.md  test.sh
.github/workflows/: ci.yml
CMake/: FindLibrary.cmake.in  GenerateLibraryConfig.cmake  InstallLibrary.cmake  LibraryConfig.cmake.in  UseLibrary.cmake.in  VTKSURFACEConfig.cmake.in
Common/: CMakeLists.txt  CheckOrientation.cxx  CleanMesh.cxx  RandomTriangulation.cxx  RenderWindow.cxx  RenderWindow.h  mesh2vtk.cxx  stl2ply.cxx  viewer.cxx  viewer2.cxx  vtk2ply.cxx  vtkCurvatureMeasure.cxx  vtkCurvatureMeasure.h  vtkDelaunay.cxx  vtkDelaunay.h  vtkDualMeshDisplay.cxx  vtkDualMeshDisplay.h  vtkManifoldSimplification.cxx  vtkMyMinimalStandardRandomSequence.h  vtkNeighbourhoodComputation.cxx  vtkNeighbourhoodComputation.h  vtkOFFReader.cxx  vtkOFFReader.h  vtkOFFWriter.cxx  vtkOFFWriter.h  vtkQuadricTools.cxx  vtkRandomTriangulation.cxx  vtkRandomTriangulation.h  vtkSMFReader.cxx  vtkSMFReader.h  vtkSMFWriter.h  vtkSurface.cxx  vtkSurface.h  vtkSurfaceBase.cxx  vtkSurfaceBase.h  vtkSurfaceIterators.h  vtkUniformClustering.h  vtkVolumeProperties.cxx  vtkVolumeProperties.h
Common/Examples/: CMakeLists.txt  CheckOrientation.cxx  CleanMesh.cxx  ExamplevtkSurface.cxx  ManifoldSimplification.cxx  RandomTriangulation.cxx  clipMesh.cxx  icp.cxx  mesh2obj.cxx  mesh2off.cxx  mesh2ply.cxx  mesh2stl.cxx  mesh2vtk.cxx  meshComponents.cxx  meshCurvature.cxx  meshDifference.cxx  sampleMesh.cxx  stl2ply.cxx  subdivideMesh.cxx  subdivideMesh2.cxx  viewer.cxx  viewer2.cxx  vtk2ply.cxx
DiscreteRemeshing/: ACVD.cxx  ACVDQ.cxx  AnisotropicRemeshing.cxx  AnisotropicRemeshingQ.cxx  CMakeLists.txt  ManifoldSimplification.cxx  VolumeAnalysis.cxx  vtkAnisotropicDiscreteRemeshing.h  vtkAnisotropicMetricForClustering.h  vtkDiscreteRemeshing.h  vtkIsotropicDiscreteRemeshing.h  vtkIsotropicMetricForClustering.h  vtkL21MetricForClustering.h  vtkManifoldSimplification.cxx  vtkManifoldSimplification.h  vtkQEMetricForClustering.h  vtkQuadricAnisotropicMetricForClustering.h  vtkSurfaceClustering.h  vtkTestUniformClustering.cxx  vtkThreadedClustering.h  vtkTrianglesProcessing.h  vtkVerticesProcessing.h  xmlParser.cpp  xmlParser.h
DiscreteRemeshing/Examples/: ACVD.cxx  ACVDP.cxx  ACVDQ.cxx  ACVDQP.cxx  AnisotropicRemeshing.cxx  AnisotropicRemeshingQ.cxx  AnisotropicRemeshingQP.cxx  CMakeLists.txt  ManifoldSimplification.cxx  VolumeAnalysis.cxx
VolumeProcessing/: BinarySubimageWriter.cxx  CMakeLists.txt  Minc2Mhd.cxx  ReadImage.cxx  ResampledVolumeGenerator.h  VolumeAnisotropicDiffusion.cxx  VolumeCleanLabels.cxx  VolumeCrop.cxx  VolumeMedian.cxx  VolumeOOCSlice.cxx  VolumeSlice.cxx  VolumeSubsample.cxx  img2raw.cxx  png2raw.cxx  vtkImageDataCleanLabels.cxx  vtkImageDataCleanLabels.h  vtkOOCMetaImageReader.cxx  vtkOOCMetaImageReader.h  vtkRobustImageReader.h
VolumeProcessing/Examples/: BinarySubimageWriter.h  CMakeLists.txt  Minc2Mhd.cxx  OOCRead.cxx  ReadImage.cxx  VolumeAnisotropicDiffusion.cxx  VolumeCleanLabels.cxx  VolumeCrop.cxx  VolumeMedian.cxx  VolumeOOCSlice.cxx  VolumeSlice.cxx  VolumeSubsample.cxx  png2raw.cxx  vtkMHDFileWriter.cxx  vtkMHDFileWriter.h
doc/: CMakeLists.txt  doxygen.config.in
js/: ACVD.js
python/: flipToRAS.py
vtkDiscreteRemeshing/: CMakeLists.txt
vtkDiscreteRemeshing/Examples/: ACVD.cxx  AnisotropicRemeshingQ.cxx  CMakeLists.txt
vtkDiscreteRemeshing/include/: vtkAnisotropicMetricForClustering.h  vtkClusteringExampleFile.h  vtkIsotropicMetricForClustering.h  vtkLloydClustering.h
vtkSurface/: CMakeLists.txt
vtkSurface/Examples/: CMakeLists.txt  CleanMesh.cxx  RandomTriangulation.cxx  mesh2vtk.cxx  viewer.cxx
vtkSurface/include/: vtkCurvatureMeasure.h  vtkNeighbourhoodComputation.h  vtkQuadricTools.h  vtkSurfaceBase.h  vtkSurfaceIterators.h  vtkTag.h  vtkVolumeProperties.h
vtkSurface/src/: sampleMesh.cxx  vtkDelaunay.cxx  vtkDualMeshDisplay.cxx  vtkMyMinimalStandardRandomSequence.cxx  vtkNeighbourhoodComputation.cxx  vtkRandomTriangulation.cxx  vtkSurfaceBase.cxx  vtkVolumeProperties.cxx
vtkVolumeProcessing/: CMakeLists.txt
vtkVolumeProcessing/Examples/: CMakeLists.txt  ResampledVolumeGenerator.cxx  VolumeSubsample.cxx  img2raw.cxx
vtkVolumeProcessing/include/: vtkImageDataCleanLabels.h  vtkRobustImageReader.h
vtkVolumeProcessing/src/: vtkOOCMetaImageReader.cxx
